# VoxelGame

./: .gitignore  CMakeLists.txt  build.gradle  build_debug.sh  build_release.sh  build_shaders.sh
assets/shaders/SPIR-V/: test.vert.spv
assets/shaders/glsl/: test.vert
include/GameEngine/: Application.hpp  GameEngine.hpp
include/GameEngine/Assets/: Loaders.hpp
include/GameEngine/Renderer/: Window.hpp
include/GameEngine/Vulkan/: Device.hpp  Queue.hpp  SwapChain.hpp  Swapchain.hpp
src/: main.cpp
src/GameEngine/: Application.cpp
src/GameEngine/Assets/: Loaders.cpp
src/GameEngine/Renderer/: Window.cpp
src/GameEngine/Vulkan/: Device.cpp  Queue.cpp  Swapchain.cpp
src/main/java/org/voxelgame/: AssetLoader.java  Time.java  VoxelGame.java
src/main/java/org/voxelgame/rendering/: Camera.java  Material.java  Mesh.java  Shader.java
src/main/java/voxelgame/: AssetLoader.java  Time.java  Utils.java  VoxelGame.java
src/main/java/voxelgame/engine/: AssetLoader.java  Identifier.java
src/main/java/voxelgame/engine/registry/: Registers.java  Registry.java  ShaderEntries.java  ShaderRegister.java
src/main/java/voxelgame/engine/world/: Region.java  World.java
src/main/java/voxelgame/rendering/: Camera.java  Material.java  Mesh.java  Shader.java  Window.java
src/main/java/voxelgame/rendering/Vulkan/: ValidationLayers.java
src/main/java/voxelgame/rendering/hud/: HUD.java
src/main/java/voxelgame/rendering/lighting/: Attenuation.java  DirectionalLight.java  PointLight.java
src/main/java/voxelgame/rendering/texture/: Texture.java  TextureTypes.java
(+7 files in other folders)
