CMAKE_MINIMUM_REQUIRED(VERSION 3.8)

PROJECT(VoxelGame VERSION 0.1.0)

if(UNIX)
    find_package(Vulkan REQUIRED FATAL_ERROR)
    find_package(glfw3 3.3 REQUIRED FATAL_ERROR)
endif(UNIX)

SET(VULKAN_LIB_LIST "vulkan")
SET(CMAKE_CXX_STANDARD 17)

SET(CMAKE_CXX_FLAGS "-O0")

FILE(GLOB_RECURSE SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
FILE(GLOB_RECURSE HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/include/*.*)

ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCES} ${HEADERS})


target_include_directories(${PROJECT_NAME}
    PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include
    PUBLIC ${GLFW_INCLUDE_DIRS} 
    PUBLIC ${VULKAN_INCLUDE_DIRS})

target_link_libraries(${PROJECT_NAME} glfw)
target_link_libraries(${PROJECT_NAME} ${VULKAN_LIB_LIST})
